minor changes - People skills api implementation